# horizonBackend

./: Dockerfile  db.sqlite3  docker-entrypoint.sh  manage.py  pyproject.toml
api/: admin.py  models.py  serializers.py  urls.py  views.py  views_student.py
api/management/commands/: create_courses.py  create_data.py
api/migrations/: 0001_initial.py  0002_department_studentprofile.py  0003_academicsession.py  0004_semester.py  0005_faculty_department_faculty.py  0006_faculty_short.py  0007_course.py  0008_course_semester.py  0009_courseenrollment_courseregistration.py  0010_level_course_level.py  0011_alter_studentprofile_level.py  0012_lecturerprofile_course_assigned_lecturers.py  0013_assignment_assignmentsubmission.py  0014_department_hod.py  0015_course_borrowing_departments.py  0016_announcement.py
api/models/: __init__.py  lecturer.py  models.py
api/views/: __init__.py  lecturer.py  student.py
serverConfig/: asgi.py  settings.py  urls.py  wsgi.py
